--- a/chat/templates/index.html
+++ b/chat/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TalkAI</title>
+    <title>MineAI</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
@@ -28,27 +28,25 @@
           </div>
         </div>
       </nav>
-
       <div class="container p-3">
         <div class="row p-4 py-3">
             <div class="col-12">
                 <div>
-                  <h2>Welcome to TalkAI</h2>
+                  <h2>Welcome to MineAI</h2>
+                  <p>Hello! My name is MineAI and I am your personal assistant for coal mining related quries. Feel free to ask me anything related to coal mining rules and acts of India.</p>
                 </div>
                 <div class="card p-2" id="replyBox">
                     <div id="reply-text">
-
                     </div>
                 </div>
             </div>
-            <div class="col col-12 py-3">
+            <div class="col col-12 py-5">
                 <form id="chat-form" method="post">
                     {% csrf_token %}
                     <input type="text" name="text" placeholder="Ask me anything about mining." id="chat-input" autocomplete="off" required>
                     <button type="button" id="askButton" onclick="evokeModel()">Ask <i class="bi bi-arrow-right"></i></button>
                 </form>
             </div>
-            
         </div>
       </div>
       <script src="{% static 'js/test.js' %}"></script>
